# law-mcp-test

./: .env.sample  .gitignore  AGENTS.md  CONTRIBUTING.md  MCP.md  README.md  main.py  plan.md  pyproject.toml
.streamlit/: config.toml
app/: __init__.py  config.py  llm.py  mcp_client.py  models.py  observability.py  permissions.py  prompting.py  ui.py
prompts/: custom_instruction_context.j2  final_answer_instruction.j2  prior_evidence_context.j2  system.j2  tool_catalog_context.j2  tool_reentry_checkpoint.j2
tests/: 01.md  02.md  03-answer.md  03-eval.md  03.md  04.md  05.md
